# url-shortner

./: .env.example  LICENSE  README.md  pyproject.toml
src/: config.py  database.py  dependencies.py  main.py
src/models/: urls.py  users.py
