[project]
name = "url-shortner"
version = "0.1.0"
description = "url shortner fastapi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "psycopg2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
